--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body, html {
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">About</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">Projects</a>
+    <a href="#projects" class="w3-bar-item w3-button" onclick="toggleFunction()">Projects</a>
   </div>
 </div>
 
@@ -94,7 +94,7 @@ body, html {
 </div>
 
 <!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
+<div class="w3-content w3-container w3-padding-64" id="projects">
   <h3 class="w3-center">Projects</h3>
   <p class="w3-center"><em>Here are some of thethings I've done for fun.</em></p><br>
 
