--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url("/ptrmoli.github.io/_uploads/sea-2755858_1920.jpg");
+    background-image: url("https://ptrmoli.github.io/_uploads/sea-2755858_1920.jpg");
     min-height: 100%;
 }
 
 /* Second image (Projects) */
 .bgimg-2 {
-    background-image: url("ptrmoli.github.io/_uploads/mountains-392669_1920.jpg");
+    background-image: url("https://ptrmoli.github.io/_uploads/mountains-392669_1920.jpg");
     min-height: 400px;
 }
 
@@ -95,7 +95,7 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m6">
-      <img src="ptrmoli.github.io/_uploads/Screen Shot 2017-11-26 at 09.30.50.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="https://ptrmoli.github.io/_uploads/Screen Shot 2017-11-26 at 09.30.50.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
 
     <div class="w3-col m6">
