--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url("../_uploads/sea-2755858_1920.jpg");
+    background-image: url("../ptrmoli.github.io/_uploads/sea-2755858_1920.jpg");
     min-height: 100%;
 }
 
