--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, html {
 
 /* Second image (Projects) */
 .bgimg-2 {
-    background-image: url("../ptrmoli.github.io/assets/images/sea-2755858_1920.jpg");
+    background-image: url("https://ptrmoli.github.io/assets/images/mountains-392669_1920.jpg");
     min-height: 400px;
 }
 
