--- a/index.html
+++ b/index.html
@@ -76,8 +76,17 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">About</h3>
-  <p>Not much to see here. I'll use this page to post random things I make.</p>
+  <h3 class="w3-center">What is this?</h3>
+  <p>Quite literally, a garage. I use this page to post random things I make.<br>I don't really have anything else to say and nobody will even read this anyway, so I'll just add a poem from the master himself, Karl Pilkington.<br><br>
+    <i>If moths had eyes, would they be happier?<br>
+    How do they know they're not dead?<br>
+    Cavemen hunting for food<br>
+    But not before they style the hair on their head<br>
+    What would last longer in dinosaur times?<br>
+    A blind man didn't stand a chance<br>
+    Not with all them rocks about<br>
+    I'd rather be a blind moth</i><br><br>
+    - Mr. K. Dilkington</p>
 </div>
 
 <!-- Second Parallax Image with Portfolio Text -->
