--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
@@ -44,11 +45,13 @@ body, html {
     }
 }
 </style>
+
+
 <body>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar" id="myNavbar">
+  <div class="w3-bar w3-white" id="myNavbar">
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
@@ -77,7 +80,7 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">What is this?</h3>
-  <p>Quite literally, a garage. I use this page to post random things I make.<br>I don't really have anything else to say and nobody will even read this anyway, so I'll just add a poem from the master himself, Karl Pilkington.<br><br>
+  <p>Quite literally, a garage. I use this page to post random things I make.<br><br>I don't really have anything else to say and nobody will even read this anyway, so I'll just add a poem from the master himself, Karl Pilkington.<br><br>
     <i>If moths had eyes, would they be happier?<br>
     How do they know they're not dead?<br>
     Cavemen hunting for food<br>
