--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> About</a>
     <a href="#projects" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> Projects</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-black">
       <i class="fa fa-search"></i>
     </a>
   </div>
@@ -80,7 +80,8 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">What is this?</h3>
-  <p>Quite literally, a garage. I use this page to post random things I make.<br><br>I don't really have anything else to say and nobody will even read this anyway, so I'll just add a poem from the master himself, Karl Pilkington.<br><br>
+  <p>Quite literally, a garage. I use this page to post random things I make. If you want to see them, scroll down to the projects section.<br><br>
+      I don't really have anything else to say and nobody will even read this anyway, so I'll just add a poem from the master himself, Karl Pilkington.<br><br>
     <i>If moths had eyes, would they be happier?<br>
     How do they know they're not dead?<br>
     Cavemen hunting for food<br>
@@ -103,25 +104,33 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="projects">
   <p class="w3-center"><em>Here are some of the things I've done for fun.</em></p><br>
 
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+  <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
-    <div class="w3-col m6">
+    <div class="w3-card-5">
+      <div class="w3-col m6">
       <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      </div>
     </div>
 
-    <div class="w3-col m6">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+    <div class="w3-card-5">
+      <div class="w3-col m6">
+      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      </div>
     </div>
 
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m6">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+    <div class="w3-card-5">
+      <div class="w3-col m6">
+      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      </div>
     </div>
 
-    <div class="w3-col m6">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+    <div class="w3-card-5">
+      <div class="w3-col m6">
+      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      </div>
     </div>
 
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">More</button>
