--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ body, html {
 
   <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
-    <div class="w3-col m6 w3-border">
-      <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-grayscale" alt="The mist over the mountains">
+    <div class="w3-col m6 w3-border w3-section">
+      <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
 
-    <div class="w3-col m6 w3-border">
-      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-grayscale" alt="The mist over the mountains">
+    <div class="w3-col m6 w3-border w3-section">
+      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
 
   </div>
