--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@ body, html {
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar" id="myNavbar">
+  <div class="w3-bar w3-white" id="myNavbar">
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
     <a href="#home" class="w3-bar-item w3-button">Home</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> About</a>
-    <a href="#projects" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> Projects</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> What is this?</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-black">
       <i class="fa fa-search"></i>
     </a>
@@ -65,8 +64,7 @@ body, html {
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">About</a>
-    <a href="#projects" class="w3-bar-item w3-button" onclick="toggleFunction()">Projects</a>
+    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">What is this?</a>
   </div>
 </div>
 
@@ -80,47 +78,21 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">What is this?</h3>
-  <p>Quite literally, a garage. I use this page to post random things I make. If you want to see them, scroll down to the projects section.<br><br>
-      I don't really have anything else to say and nobody will even read this anyway, so I'll just add a poem from the master himself, Karl Pilkington.<br><br>
-    <i>If moths had eyes, would they be happier?<br>
-    How do they know they're not dead?<br>
-    Cavemen hunting for food<br>
-    But not before they style the hair on their head<br>
-    What would last longer in dinosaur times?<br>
-    A blind man didn't stand a chance<br>
-    Not with all them rocks about<br>
-    I'd rather be a blind moth</i><br><br>
-    - Mr. K. Dilkington</p>
-</div>
-
-<!-- Second Parallax Image with Portfolio Text -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">Projects</span>
-  </div>
-</div>
-
-<!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="projects">
-  <p class="w3-center"><em>Here are some of the things I've done for fun.</em></p><br>
-
-  <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+  <p>Quite literally, a garage. I use this page to post random things I make.</p>
+    
+    <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
-    <div class="w3-col m6 w3-border w3-section">
+      <div class="w3-col m6 w3-border w3-margin">
       <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
-
-    <div class="w3-col m6 w3-border w3-section">
+    <div class="w3-col m6 w3-border w3-margin">
       <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
-
   </div>
-
-  <div class="w3-row-padding w3-center w3-section">
-
+  <div class="w3-row-padding w3-center">
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">More</button>
-      
   </div>
+ </div>
 </div>
 
 </body>
