--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ body, html {
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button">Home</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> What is this?</a>
+    <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i>Home</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small"> What is this?</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-black">
       <i class="fa fa-search"></i>
     </a>
@@ -78,15 +78,15 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">What is this?</h3>
-  <p>Quite literally, a garage. I use this page to post random things I make.</p>
+  <p class="w3-center w3-padding-48">Quite literally, a garage. I use this page to post random things I make.</p>
     
     <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
       <div class="w3-col m6 w3-border w3-margin">
-      <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:80%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
     <div class="w3-col m6 w3-border w3-margin">
-      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:80%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
   </div>
   <div class="w3-row-padding w3-center">
