--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body, html {
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i>Home</a>
+    <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i></a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"> What is this?</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-black">
       <i class="fa fa-search"></i>
