--- a/index.html
+++ b/index.html
@@ -29,12 +29,6 @@ body, html {
     min-height: 100%;
 }
 
-/* Second image (Projects) */
-.bgimg-2 {
-    background-image: url("https://ptrmoli.github.io/assets/images/mountains-392669_1920.jpg");
-    min-height: 400px;
-}
-
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
 
@@ -82,10 +76,14 @@ body, html {
     
     <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
-      <div class="w3-col m5 w3-border w3-margin">
+    <div class="w3-col m5 w3-border w3-margin">
+      <h4 class="w3-center"><b>Serie A results</b></h4>
+      <p class="w3-center">Heatmaps of all results for each Serie A team since the 1986-87 season</p>
       <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
     <div class="w3-col m5 w3-border w3-margin">
+      <h4 class="w3-center"><b>Coming soon</b></h4>
+      <p class="w3-center">Still not sure what this will be</p>
       <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
   </div>
