--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@ body, html {
     
     <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
-    <div class="w3-col m5 w3-border w3-margin">
+    <div class="w3-col m6">
       <h4 class="w3-center"><b>Serie A results</b></h4>
       <p class="w3-center">Heatmaps of all results for each Serie A team since the 1986-87 season</p>
-      <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border">
     </div>
-    <div class="w3-col m5 w3-border w3-margin">
+    <div class="w3-col m6">
       <h4 class="w3-center"><b>Coming soon</b></h4>
       <p class="w3-center">Still not sure what this will be</p>
-      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border">
     </div>
   </div>
   <div class="w3-row-padding w3-center">
