--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">What is this?</h3>
-  <p class="w3-center w3-padding-48">Quite literally, a garage. I use this page to post random things I make.</p>
+  <p class="w3-center w3-padding-16">Quite literally, a garage. I use this page to post random things I make.</p>
     
     <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="w3-row-padding w3-center">
+  <div class="w3-row-padding w3-center w3-padding-32">
     <div class="w3-col m6">
       <h4 class="w3-center"><b>Serie A results</b></h4>
       <p class="w3-center">Interactive heatmaps of all results for each Serie A team since the 1986-87 season</p>
       <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border">
     </div>
     <div class="w3-col m6">
-      <h4 class="w3-center"><b>Coming soon</b></h4>
+      <h4 class="w3-center"><b>Coming soon<br></b></h4>
       <p class="w3-center">Still not sure what this will be</p>
       <img src="https://ptrmoli.github.io/assets/images/comingsoon.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border">
     </div>
