--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body, html {
   <div class="w3-row-padding w3-center w3-padding-32">
     <div class="w3-col m6">
       <h4 class="w3-center"><b>Serie A results</b></h4>
-      <p class="w3-center">Interactive heatmaps of all results for each Serie A team since the 1986-87 season</p>
+      <p class="w3-center">Interactive heatmaps for each Serie A team since 1986</p>
       <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity w3-border">
     </div>
     <div class="w3-col m6">
