--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@ body, html {
     <div class="w3-col m6">
       <h4 class="w3-center"><b>Serie A results</b></h4>
       <p class="w3-center">Interactive heatmaps for each Serie A team since 1986</p>
-      <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" href="https://ptrmoli.github.io/projects/serie_a_results" class="w3-hover-opacity w3-border">
+        <a href="https://ptrmoli.github.io/projects/serie_a_results">
+        <img src="https://ptrmoli.github.io/assets/images/serieAresults.png" style="width:100%" href="https://ptrmoli.github.io/projects/serie_a_results" class="w3-hover-opacity w3-border">
+        </a>
     </div>
     <div class="w3-col m6">
       <h4 class="w3-center"><b>Coming soon<br></b></h4>
