--- a/projects/serie-a-results.html
+++ b/projects/serie-a-results.html
@@ -34,7 +34,7 @@ body, html {
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i></a>
+    <a href="https://ptrmoli.github.io" class="w3-bar-item w3-button"><i class="fa fa-home"></i></a>
   </div>
 </div>
 
@@ -44,11 +44,12 @@ body, html {
   <h2>Serie A results</h2>
   <p class="w3-padding-16">Here I can write the description.<br>
   <b>Step 1 - Data collection</b><br>
-  I used <a href="https://www.crummy.com/software/BeautifulSoup/">Beautifulsoup</a> to extract data from the website of the <a herf="http://www.legaseriea.it/en/serie-a-tim/archive">Lega Serie A</a> and saved the data into a csv<br>
+  I used <a href="https://www.crummy.com/software/BeautifulSoup/">Beautifulsoup</a> to extract data from the website of the <a href="http://www.legaseriea.it/en/serie-a-tim/archive">Lega Serie A</a> and saved the data into a csv<br>
   <b>Step 2 - Data manipulation</b><br>
-  I then organised the data into Pandas DataFrames and created a dictionary with a DataFrame for each club.<br>
+  I then organised the data into Pandas DataFrames and created a dictionary with a DataFrame for each club<br>
   <b>Step 3 - Data visualisation</b><br>
-  Finally I used <a href="https://bokeh.pydata.org/en/latest/">Bokeh</a> to create the heatmaps and add the tooltip on hovering<br></p>
+  Finally I used <a href="https://bokeh.pydata.org/en/latest/">Bokeh</a> to create the heatmaps and add the tooltip on hovering<br><br></p>
+  <h4>Be patient, it might take about a minute to lead</h4>
 </div>
 
     
