--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body, html {
       <h4 class="w3-center"><b>Serie A results</b></h4>
       <p class="w3-center">Interactive heatmaps for each Serie A club since 1986</p>
         <a href="https://ptrmoli.github.io/projects/serie-a-results">
-        <img src="https://ptrmoli.github.io/assets/images/serie-a.png" style="width:100%" class="w3-hover-opacity w3-border w3-hover-shadow">
+        <img src="https://ptrmoli.github.io/assets/images/serie-a.png" style="width:100%" class="w3-hover-shadow">
         </a>
     </div>
     <div class="w3-col m6">
