--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body, html {
     <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center w3-padding-32">
     <div class="w3-col m6">
-      <h4 class="w3-center"><b>Serie A results</b></h4>
+      <a href="https://ptrmoli.github.io/projects/serie-a-results"><h4 class="w3-center"><b>Serie A results</b></h4></a>
       <p class="w3-center">Interactive heatmaps for each Serie A club since 1986</p>
         <a href="https://ptrmoli.github.io/projects/serie-a-results">
         <img src="https://ptrmoli.github.io/assets/images/serie-a.png" style="width:100%" class="w3-hover-shadow">
