--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ body, html {
     <div class="w3-col m6">
       <a href="https://ptrmoli.github.io/projects/serie-a-results"><h4 class="w3-center"><b>Serie A results</b></h4></a>
       <p class="w3-center">Interactive heatmaps for each Serie A club since 1986</p>
-      <img src="https://ptrmoli.github.io/assets/images/serie-a.png" style="width:100%" class="w3-hover-shadow">
+      <img src="https://ptrmoli.github.io/assets/images/serie-a.png" style="width:100%" class="w3-display-container w3-hover-opacity">
       <div class="w3-display-middle w3-display-hover w3-xlarge">
-       <button class="w3-button w3-black">Check it out</button>
+       <a href="https://ptrmoli.github.io/projects/serie-a-results" class="w3-button w3-black">Check it out</a>
       </div>
     </div>
       
