--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body, html {
       <div class="w3-display-container w3-hover-opacity" style="width:100%">
       <img src="https://ptrmoli.github.io/assets/images/serie-a.png" style="width:100%" class="w3-display-container w3-hover-opacity">
       <div class="w3-display-middle w3-display-hover w3-xlarge">
-       <a href="https://ptrmoli.github.io/projects/serie-a-results" class="w3-button w3-black">Check it out</a>
+       <a href="https://ptrmoli.github.io/projects/serie-a-results" class="w3-btn w3-black">Check it out</a>
       </div>
       </div>
     </div>
