Update and rename NBA-sportVU to NBA-sportVU.html

--- a/projects/NBA-sportVU.html
+++ b/projects/NBA-sportVU.html
@@ -37,8 +37,9 @@ body, html {
 
 <!-- Container -->
 <div class="w3-content w3-container w3-padding-64">
-  <h2>Serie A results</h2>
-  <p class="w3-padding-16">This is a collection of interactive (well, just a little bit) heatmaps showing all results of each club that played in Serie A from the 1986-87 season to the 2016-17 season. Put your cursor on a square to see the result of any specific game.<br>
+  <h2>NBA SportVU animation</h2>
+  <p class="w3-padding-16">Here are some examples of animations of tracking data from an NBA game.<br>
+  The game is 
   <b>Step 1 - Data collection</b><br>
   I used <a href="https://www.crummy.com/software/BeautifulSoup/">Beautifulsoup</a> to extract data from the website of the <a href="http://www.legaseriea.it/en/serie-a-tim/archive">Lega Serie A</a> and saved the data into a csv.<br>
   <b>Step 2 - Data manipulation</b><br>
