--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@ body, html {
   <h3 class="w3-center">What is this?</h3>
   <p class="w3-center w3-padding-16">Quite literally, a garage. I use this page to park random things I made.</p>
     
-    <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+    <!-- Responsive Grid. Two columns on tablets, laptops and desktops. Will stack on mobile devices/small screens -->
   <div class="w3-row-padding w3-center w3-padding-32">
     <div class="w3-col m6">
       <a href="https://ptrmoli.github.io/projects/serie-a-results"><h4 class="w3-center"><b>Serie A results</b></h4></a>
       <p class="w3-center">Interactive heatmaps for each Serie A club since 1986</p>
-      <div class="w3-display-container w3-hover-opacity" style="width:100%">
-      <img src="https://ptrmoli.github.io/assets/images/serie-a.png" style="width:100%">
+      <div class="w3-display-container w3-hover-opacity" style="width:90%">
+      <img src="https://ptrmoli.github.io/assets/images/serie-a.png" height: 350px">
       <div class="w3-display-middle w3-display-hover w3-xlarge">
        <a href="https://ptrmoli.github.io/projects/serie-a-results" class="w3-btn w3-black">Check it out</a>
       </div>
@@ -84,8 +84,8 @@ body, html {
     <div class="w3-col m6">
       <a href="https://ptrmoli.github.io/projects/NBA-sportVU"><h4 class="w3-center"><b>NBA tracking data</b></h4></a>
       <p class="w3-center">Animations of tracking data from an NBA game</p>
-      <div class="w3-display-container w3-hover-opacity" style="width:100%">
-      <img src="https://ptrmoli.github.io/assets/images/NBAcourt.png" style="width:100%">
+      <div class="w3-display-container w3-hover-opacity" style="width:90%">
+      <img src="https://ptrmoli.github.io/assets/images/NBAcourt.png" height: 350px">
       <div class="w3-display-middle w3-display-hover w3-xlarge">
        <a href="https://ptrmoli.github.io/projects/NBA-sportVU" class="w3-btn w3-black">Check it out</a>
       </div>
