--- a/projects/NBA-sportVU.html
+++ b/projects/NBA-sportVU.html
@@ -41,17 +41,28 @@ body, html {
   <p class="w3-padding-16">Here are some examples of animations of tracking data from an NBA game.<br>
   The game is 
   <b>Step 1 - Data collection</b><br>
-  I used <a href="https://www.crummy.com/software/BeautifulSoup/">Beautifulsoup</a> to extract data from the website of the <a href="http://www.legaseriea.it/en/serie-a-tim/archive">Lega Serie A</a> and saved the data into a csv.<br>
+  Explain <a href="https://www.google.com">link</a> explain more.<br>
   <b>Step 2 - Data manipulation</b><br>
-  I then organised the data into Pandas DataFrames and created a dictionary with a DataFrame for each club.<br>
+  Explain <a href="https://www.google.com">link</a> explain more.<br>
   <b>Step 3 - Data visualisation</b><br>
-  Finally I used <a href="https://bokeh.pydata.org/en/latest/">Bokeh</a> to create the heatmaps and add the tooltip on hovering.<br><br></p>
-  <h4>Please be patient, it may take about 30 seconds to load</h4>
+  Explain <a href="https://www.google.com">link</a> explain more.</p>
 </div>
 
     
 <!-- videos -->
-
+<video controls>
+  <source src="ptrmoli.github.io/assets/videos/clip42.mp4" type="video/mp4">
+</video>
+<br>
+<br>
+<video controls>
+  <source src="ptrmoli.github.io/assets/videos/clip58.mp4" type="video/mp4">
+</video>
+<br>
+<br>
+<video controls>
+  <source src="ptrmoli.github.io/assets/videos/clip89.mp4" type="video/mp4">
+</video>
 
 
 </body>
