--- a/projects/NBA-sportVU.html
+++ b/projects/NBA-sportVU.html
@@ -50,19 +50,25 @@ body, html {
 
     
 <!-- videos -->
-<video controls>
-  <source src="ptrmoli.github.io/assets/videos/clip42.mp4" type="video/mp4">
+<div class="w3-content w3-container w3-padding-64">
+<video width="960" height="720" controls>
+  <source src="https://ptrmoli.github.io/assets/videos/clip42.mp4" type="video/mp4">
 </video>
+</div>
 <br>
 <br>
-<video controls>
-  <source src="ptrmoli.github.io/assets/videos/clip58.mp4" type="video/mp4">
+<div class="w3-content w3-container w3-padding-64">
+<video width="960" height="720" controls>
+  <source src="https://ptrmoli.github.io/assets/videos/clip58.mp4" type="video/mp4">
 </video>
+</div>
 <br>
 <br>
-<video controls>
-  <source src="ptrmoli.github.io/assets/videos/clip89.mp4" type="video/mp4">
+<div class="w3-content w3-container w3-padding-64">
+<video width="960" height="720" controls>
+  <source src="https://ptrmoli.github.io/assets/videos/clip89.mp4" type="video/mp4">
 </video>
+</div>
 
 
 </body>
