--- a/projects/NBA-sportVU.html
+++ b/projects/NBA-sportVU.html
@@ -50,20 +50,19 @@ body, html {
 
     
 <!-- videos -->
+<h5>Clip 1</h5>
 <div class="w3-content w3-container w3-padding-64">
 <video width="960" height="720" controls>
   <source src="https://ptrmoli.github.io/assets/videos/clip42.mp4" type="video/mp4">
 </video>
 </div>
-<br>
-<br>
+<h5>Clip 2</h5>
 <div class="w3-content w3-container w3-padding-64">
 <video width="960" height="720" controls>
   <source src="https://ptrmoli.github.io/assets/videos/clip58.mp4" type="video/mp4">
 </video>
 </div>
-<br>
-<br>
+<h5>Clip 3</h5>
 <div class="w3-content w3-container w3-padding-64">
 <video width="960" height="720" controls>
   <source src="https://ptrmoli.github.io/assets/videos/clip89.mp4" type="video/mp4">
