--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body, html {
     </div>
       
     <div class="w3-col m6">
-      <a href="https://ptrmoli.github.io/projects/NBA-sportVU"><h4 class="w3-center"><b>NBA tracking data</b></h4></a>
+      <a href="https://ptrmoli.github.io/projects/NBA-sportVU"><h4 class="w3-center"><b>NBA StportVU animations</b></h4></a>
       <p class="w3-center">Animations of tracking data from an NBA game</p>
       <div class="w3-display-container w3-hover-opacity" style="width:100%">
       <img src="https://ptrmoli.github.io/assets/images/NBA-court.png" height="350">
