--- a/projects/NBA-sportVU.html
+++ b/projects/NBA-sportVU.html
@@ -38,7 +38,7 @@ body, html {
 <!-- Container -->
 <div class="w3-content w3-container w3-padding-64">
   <h2>NBA SportVU animations</h2>
-  <p class="w3-padding-16">Here are some examples of animations of tracking data from an NBA game. The <a href="http://www.nba.com/games/20160105/GSWLAL/gameinfo.html">game</a> was a Golden State Warriors - Los Angeles Lakers from January 2016.<br>
+  <p class="w3-padding-16">Here are some examples of animations of tracking data from an NBA game. The game was a <a href="http://www.nba.com/games/20160105/GSWLAL/gameinfo.html">Golden State Warriors - Los Angeles Lakers</a> from January 2016.<br>
   <b>Step 1 - Data collection</b><br>
   I downloaded the data from <a href="https://github.com/linouk23/NBA-Player-Movements/tree/master/data/2016.NBA.Raw.SportVU.Game.Logs">linouk23's github</a> and extracted it as JSON.<br>
   <b>Step 2 - Data manipulation</b><br>
